--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asttokens==2.4.1
 colorama==0.4.6
 decorator==5.1.1
 Django==4.2.7
+djangorestframework==3.14.0
 executing==2.0.1
 ipython==8.17.2
 jedi==0.19.1
@@ -11,6 +12,7 @@ parso==0.8.3
 prompt-toolkit==3.0.41
 pure-eval==0.2.2
 Pygments==2.17.2
+pytz==2023.3.post1
 six==1.16.0
 sqlparse==0.4.4
 stack-data==0.6.3
