--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,19 @@ decorator==5.1.1
 Django==4.2.7
 djangorestframework==3.14.0
 executing==2.0.1
+iniconfig==2.0.0
 ipython==8.17.2
 jedi==0.19.1
 matplotlib-inline==0.1.6
+packaging==23.2
 parso==0.8.3
+pluggy==1.3.0
 prompt-toolkit==3.0.41
 pure-eval==0.2.2
 Pygments==2.17.2
+pytest==7.4.3
+pytest-django==4.7.0
+pytest-testdox==3.1.0
 pytz==2023.3.post1
 six==1.16.0
 sqlparse==0.4.4
